--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 
@@ -35,12 +34,21 @@
                 <span></span>
             </button>
 
-            <nav class="nav" id="nav">
-                <a href="#">私たちについて</a>
-                <a href="#">会社概要</a>
-                <a href="#">事業案内</a>
-                <a href="#">採用情報</a>
-                <a href="#">お問い合わせ</a>
+            <nav class="nav" id="nav" aria-hidden="true">
+                <!-- 右上角 close -->
+                <button class="nav-close" id="navClose" type="button" aria-label="Close menu">
+                    <span class="nav-close-x">×</span>
+                    <span class="nav-close-text">CLOSE</span>
+                </button>
+
+                <!-- 中间菜单 -->
+                <div class="nav-panel">
+                    <a href="#" class="is-active">私たちについて</a>
+                    <a href="#">会社概要</a>
+                    <a href="#">事業案内</a>
+                    <a href="#">採用情報</a>
+                    <a href="#">お問い合わせ</a>
+                </div>
             </nav>
 
         </div>
