--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
     </header>
 
+
+    <!-- section hero -->
     <section class="hero">
         <img src="./assets/img/index/intro_screen.png" alt="" class="hero-bg">
 
@@ -65,6 +67,8 @@
         </div>
     </section>
 
+
+    <!-- section about -->
     <section class="about">
         <div class="about-inner">
 
@@ -107,6 +111,95 @@
             <div class="about-image-wrap">
                 <div class="bg-block"></div>
                 <img src="./assets/img/index/intro_car.png" alt="about image">
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- section company -->
+    <section class="company" id="company">
+        <div class="company-inner">
+
+            <!-- left: title + image -->
+            <div class="company-left">
+                <h2 class="subtitle company-title">
+                    <span class="bar"></span>
+                    会社概要
+                </h2>
+
+                <div class="company-image-wrap">
+                    <div class="company-bg-block"></div>
+                    <img src="./assets/img/index/intro_slate.png" alt="company image">
+                </div>
+            </div>
+
+            <!-- right: table -->
+            <div class="company-right">
+                <dl class="company-dl">
+                    <div class="company-row">
+                        <dt>会社名</dt>
+                        <dd>スターシードプロダクション株式会社</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>代表</dt>
+                        <dd>辻 隆幸</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>本社</dt>
+                        <dd>栃木県那須郡那須町富岡</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>営業所</dt>
+                        <dd>東京都狛江市東野川</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>電話</dt>
+                        <dd>
+                            090-2488-0058 長谷川 又は<br>
+                            090-6952-5737 辻まで
+                        </dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>メール</dt>
+                        <dd>作成中</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>設立</dt>
+                        <dd>2025/7/25</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>資本金</dt>
+                        <dd>記載しない</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>従業員数</dt>
+                        <dd>記載しない</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>取引銀行</dt>
+                        <dd>住信SBIネット銀行・法人第一支店 普通 2888405</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>会社法人等番号</dt>
+                        <dd>4060001038443</dd>
+                    </div>
+
+                    <div class="company-row">
+                        <dt>etc.</dt>
+                        <dd>-</dd>
+                    </div>
+                </dl>
             </div>
 
         </div>
