--- a/index.html
+++ b/index.html
@@ -205,6 +205,27 @@
         </div>
     </section>
 
+
+    <section class="gallery-marquee">
+        <div class="marquee">
+            <div class="marquee-track">
+                <!-- 1st set -->
+                <img src="./assets/img/index/anime_car.png" alt="">
+                <img src="./assets/img/index/anime_liveview1.png" alt="">
+                <img src="./assets/img/index/anime_fujisan.png" alt="">
+                <img src="./assets/img/index/anime_liveview2.png" alt="">
+                <img src="./assets/img/index/anime_tunnel.png" alt="">
+
+                <!-- 2nd set (duplicate) -->
+                <img src="./assets/img/index/anime_car.png" alt="">
+                <img src="./assets/img/index/anime_liveview1.png" alt="">
+                <img src="./assets/img/index/anime_fujisan.png" alt="">
+                <img src="./assets/img/index/anime_liveview2.png" alt="">
+                <img src="./assets/img/index/anime_tunnel.png" alt="">
+            </div>
+        </div>
+    </section>
+
     <script src="./assets/js/script.js"></script>
 </body>
 
