--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 
                     <div class="company-row">
                         <dt>取引銀行</dt>
-                        <dd>住信SBIネット銀行・法人第一支店 普通 2888405</dd>
+                        <dd>住信SBIネット銀行・法人第一支店<br>
+                            普通 2888405</dd>
                     </div>
 
                     <div class="company-row">
