--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
     </section>
 
-
+    <!-- gallery -->
     <section class="gallery-marquee">
         <div class="marquee">
             <div class="marquee-track">
@@ -224,6 +224,165 @@
                 <img src="./assets/img/index/anime_liveview2.png" alt="">
                 <img src="./assets/img/index/anime_tunnel.png" alt="">
             </div>
+        </div>
+    </section>
+
+    <!-- works -->
+    <section class="works" id="works">
+
+        <!-- 装飾画像 -->
+        <img class="works-deco deco-clapper" src="./assets/img/index/decor_clapperboard.png" alt="">
+        <img class="works-deco deco-film1" src="./assets/img/index/decor_film1.png" alt="">
+        <img class="works-deco deco-projector" src="./assets/img/index/decor_projector.png" alt="">
+        <img class="works-deco deco-film2" src="./assets/img/index/decor_film2.png" alt="">
+        <img class="works-deco deco-film3" src="./assets/img/index/decor_film3.png" alt="">
+
+
+
+        <!-- コンテンツ -->
+        <div class="works-inner">
+
+            <h2 class="works-title">事業案内</h2>
+
+            <!-- 映画 -->
+            <div class="works-group">
+                <h3 class="section-sub sub-film">映画</h3>
+
+                <div class="works-grid">
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_saibo.png" alt="はたらく細胞">
+                        <p>Netflix映画<br>『はたらく細胞』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_sayuri.png" alt="サユリ">
+                        <p>『サユリ』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_kajyu.png" alt="怪獣ヤロウ">
+                        <p>『怪獣ヤロウ』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_shotai.png" alt="正体">
+                        <p>『正体』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_karateka.png" alt="KARATEKA">
+                        <p>スペイン映画『KARATEKA』<br>2026年公開予定</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/film_mirai.png" alt="ミライヘキミト">
+                        <p>マイナビ50th WEB映画<br>『ミライヘキミト』</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ドラマ -->
+            <div class="works-group works-group-drama">
+                <!-- 装饰：胶卷 -->
+                <!-- <img class="works-deco deco-film1" src="./assets/img/index/decor_film1.png" alt=""> -->
+
+                <h3 class="section-sub sub-drama">ドラマ</h3>
+
+                <div class="works-grid">
+                    <div class="work-item">
+                        <img src="./assets/img/index/drama_FYB.png" alt="FYB">
+                        <p>Netflixドラマ<br>『FYB』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/drama_kousho.png" alt="交渉の技術">
+                        <p>韓国ドラマ<br>『交渉の技術』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/drama_kaze.png" alt="風のふく島">
+                        <p>テレビ東京<br>『風のふく島』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/drama_wedding.png" alt="ウエディング・ウォー">
+                        <p>ABEMA<br>『ウエディング・ウォー』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/drama_joshi.png" alt="極道上司">
+                        <p>テレビ東京<br>『極道上司』</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CM -->
+            <div class="works-group works-group-cm">
+
+                <!-- 装饰：放映机 -->
+                <!-- <img class="works-deco deco-projector" src="./assets/img/index/decor_projector.png" alt=""> -->
+
+                <h3 class="section-sub sub-cm">CM</h3>
+
+                <div class="works-grid">
+                    <div class="work-item">
+                        <img src="./assets/img/index/cm_kasai.png" alt="共栄火災海上保険">
+                        <p>『共栄火災海上保険』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/cm_sega.png" alt="セガトイズ">
+                        <p>『セガトイズ』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/cm_asahi.png" alt="アサヒ飲料">
+                        <p>『アサヒ飲料』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/cm_omuron.png" alt="オムロン">
+                        <p>『オムロン』</p>
+                    </div>
+
+                    <div class="work-item">
+                        <img src="./assets/img/index/cm_ibm.png" alt="IBM">
+                        <p>『IBM』</p>
+                    </div>
+                </div>
+
+                <p class="works-note">
+                    ※上記作品において車両部・俳優部として担当いたしました。
+                </p>
+
+            </div>
+
+            <!-- 取引企業 -->
+            <div class="partners">
+                <h3 class="section-sub">取引企業</h3>
+                <p class="works-note">
+                    ※主な取引企業は映像制作会社様が基軸になります
+                </p>
+
+                <div class="partners-grid">
+                    <img class="p-django" src="./assets/img/index/logo_django.png" alt="DJANGO FILM">
+                    <img class="p-tfc" src="./assets/img/index/logo_tfc.png" alt="TFC">
+                    <img class="p-axon" src="./assets/img/index/logo_anox.png" alt="AX-ON">
+
+                    <img class="p-kadokawa" src="./assets/img/index/logo_kadokawa.png" alt="KADOKAWA">
+                    <img class="p-geek" src="./assets/img/index/logo_geek.png" alt="GEEK PICTURES">
+                    <img class="p-touei" src="./assets/img/index/logo_touei.png" alt="TOUEI">
+
+                    <img class="p-aoipro" src="./assets/img/index/logo_aoipro.png" alt="AOI Pro.">
+                    <img class="p-robot" src="./assets/img/index/logo_robot.png" alt="ROBOT">
+
+                    <img class="p-union" src="./assets/img/index/logo_union.png" alt="UNION">
+                    <img class="p-tvman" src="./assets/img/index/logo_tvman.png" alt="TV MAN UNION">
+                </div>
+
+                <p class="works-note">他、多数。</p>
+            </div>
+
         </div>
     </section>
 
