--- a/index.html
+++ b/index.html
@@ -386,6 +386,167 @@
         </div>
     </section>
 
+
+    <section id="recruit" class="recruit">
+        <div class="recruit__container">
+
+            <h2 class="recruit__title">採用情報</h2>
+
+            <!-- ① フリーランスドライバー -->
+            <article class="recruit-card recruit-card--driver">
+
+                <!-- 左图 -->
+                <figure class="recruit-media">
+                    <span class="recruit-media__bg"></span>
+                    <img class="recruit-media__img" src="./assets/img/index/job_car.png" alt="driver image">
+                </figure>
+
+                <!-- 右侧内容 -->
+                <div class="recruit-content">
+
+                    <h3 class="recruit-heading">
+                        <span class="recruit-heading__num">①</span>
+                        <span>フリーランスドライバー</span>
+                    </h3>
+
+                    <p class="recruit-sub">
+                        月額報酬例45〜70万円男女差無し
+                    </p>
+
+                    <div class="recruit-grid">
+                        <div>アルバイトドライバー</div>
+                        <div>
+                            日当20,000〜<br>
+                            <small>研修期間中は15,000〜</small>
+                        </div>
+
+                        <div>正社員ドライバー</div>
+                        <div>給与25万円〜</div>
+                    </div>
+
+                    <div class="recruit-list">
+                        <div class="recruit-list-title">車両</div>
+                        <ul>
+                            <li>ハイエースクラス</li>
+                            <li>アルファードクラス</li>
+                            <li>マイクロバスクラス</li>
+                            <li>トラック普通クラス</li>
+                            <li>トラック中型クラス</li>
+                        </ul>
+                    </div>
+
+                    <p class="recruit-note">
+                        各クラスのドライバーを多数募集しております
+                    </p>
+
+                    <ul class="recruit-warn">
+                        <li>※女性ドライバー希望者を優先します。</li>
+                        <li>※中型自動車免許以上の免許をお持ちの方優先します。</li>
+                        <li>※中型自動車免許取得支援制度有り</li>
+                    </ul>
+
+                    <a class="recruit-btn" href="#vehicles">
+                        車両部の説明
+                        <span class="recruit-btn__icon">
+                            <img src="./assets/img/index/icon_arrow.png" alt="">
+                        </span>
+                    </a>
+
+                </div>
+
+                <!-- 左下车插画 -->
+                <img class="recruit__car" src="./assets/img/index/decor_car.png" alt="car deco">
+
+            </article>
+
+
+            <!-- ② 俳優 -->
+            <article class="recruit-card recruit-card--actor">
+
+                <div class="recruit-content">
+                    <h3 class="recruit-heading recruit-heading-actor">
+                        <span class="recruit-heading__num">②</span>
+                        <span>俳優（男女）</span>
+                    </h3>
+
+                    <p class="recruit-sub">
+                        経験者・未経験者は問いません
+                    </p>
+
+                    <p class="recruit-note">
+                        ※経験者は過去の事務所との関係が<br>
+                        完全に切れている事が前提です。
+                    </p>
+                </div>
+
+                <figure class="recruit-media recruit-media--right">
+                    <span class="recruit-media__bg recruit-media__bg--right"></span>
+                    <img class="recruit-media__img" src="./assets/img/index/job_liveview.png" alt="actor image">
+                </figure>
+
+            </article>
+
+        </div>
+    </section>
+
+
+    <section id="contact" class="contact">
+        <div class="contact__container">
+
+            <div class="contact-card">
+                <h2 class="contact-title">お問い合わせ</h2>
+
+                <!-- phone -->
+                <div class="contact-row">
+                    <div class="contact-left">
+                        <img class="contact-icon" src="./assets/img/index/icon_phone.png" alt="phone">
+                        <p class="contact-label">お電話からのお問い合せ</p>
+                    </div>
+
+                    <a class="contact-pill" href="tel:09069525737">
+                        090-6952-5737
+                    </a>
+                </div>
+
+                <!-- mail -->
+                <div class="contact-row">
+                    <div class="contact-left">
+                        <img class="contact-icon" src="./assets/img/index/icon_email.png" alt="mail">
+                        <p class="contact-label">メールからのお問い合せ</p>
+                    </div>
+
+                    <a class="contact-pill contact-pill--small" href="mailto:takayuki.53.iphone@icloud.com">
+                        takayuki.53.iphone@icloud.com
+                    </a>
+                </div>
+
+                <hr class="contact-divider">
+
+                <h2 class="contact-title contact-title--sub">アクセス</h2>
+
+                <div class="access">
+                    <div class="access-map">
+                        <!-- 这里换成你自己的 Google Map iframe -->
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.406836848623!2d139.58180097644694!3d35.64234687259974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f10dd12db629%3A0x6c3bc5e72eed361b!2z5pel5pys44CB44CSMjAxLTAwMDIg5p2x5Lqs6YO954ub5rGf5biC5p2x6YeO5bed77yU5LiB55uu77yR77yU4oiS77yR77yVIOODl-ODhuOCo-ODvOOCs-ODvOODnQ!5e0!3m2!1sja!2s!4v1772015755185!5m2!1sja!2s"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    </div>
+
+                    <div class="access-text">
+                        <p class="access-zip">〒201-0002</p>
+                        <p class="access-addr">
+                            東京都狛江市東野川4-14-15<br>
+                            プティコーポ102
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <script src="./assets/js/script.js"></script>
 </body>
 
