--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
                 <!-- 中间菜单 -->
                 <div class="nav-panel">
-                    <a href="#" class="is-active">私たちについて</a>
-                    <a href="#">会社概要</a>
-                    <a href="#">事業案内</a>
-                    <a href="#">採用情報</a>
-                    <a href="#">お問い合わせ</a>
+                    <a href="#about">私たちについて</a>
+                    <a href="#company">会社概要</a>
+                    <a href="#works">事業案内</a>
+                    <a href="#recruit">採用情報</a>
+                    <a href="#contact">お問い合わせ</a>
                 </div>
             </nav>
 
@@ -69,7 +69,7 @@
 
 
     <!-- section about -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-inner">
 
             <!-- left words -->
@@ -546,6 +546,41 @@
 
         </div>
     </section>
+
+
+    <footer class="footer">
+        <div class="footer-inner">
+
+            <!-- Logo -->
+            <div class="footer-logo">
+                <img src="./assets/img/index/logo_black.png" alt="Starseed Production">
+            </div>
+
+            <!-- 公司名 -->
+            <h3 class="footer-company">
+                スターシードプロダクション株式会社
+            </h3>
+
+            <!-- SNS -->
+            <div class="footer-sns">
+                <a href="#" class="sns-x" aria-label="X">
+                    <img src="./assets/img/index/icon_twitter.png" alt="">
+                </a>
+                <a href="#" class="sns-instagram" aria-label="Instagram">
+                    <img src="./assets/img/index/icon_ins.png" alt="">
+                </a>
+                <a href="#" class="sns-youtube" aria-label="YouTube">
+                    <img src="./assets/img/index/icon_youtube.png" alt="">
+                </a>
+            </div>
+
+            <!-- Copy -->
+            <p class="footer-copy">
+                © 2025 Starseed Production Co., Ltd. All Rights Reserved.
+            </p>
+
+        </div>
+    </footer>
 
     <script src="./assets/js/script.js"></script>
 </body>
