--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
             <div class="logo">
                 <a href="index.html" class="logo-link">
-                    <img src="./assets/img/index/logo_white.png" alt="logo">
+                    <img src="./assets/img/index/logo_white.png" alt="">
+                    <!-- <img src="./assets/img/index/logo_black.png" alt=""> -->
                     <span>株式会社スターシードプロダクション</span>
                 </a>
             </div>
@@ -445,7 +446,7 @@
                         <li>※中型自動車免許取得支援制度有り</li>
                     </ul>
 
-                    <a class="recruit-btn" href="#vehicles">
+                    <a class="recruit-btn" href="./job_car.html">
                         車両部の説明
                         <span class="recruit-btn__icon">
                             <img src="./assets/img/index/icon_arrow.png" alt="">
@@ -526,7 +527,6 @@
 
                 <div class="access">
                     <div class="access-map">
-                        <!-- 这里换成你自己的 Google Map iframe -->
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.406836848623!2d139.58180097644694!3d35.64234687259974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f10dd12db629%3A0x6c3bc5e72eed361b!2z5pel5pys44CB44CSMjAxLTAwMDIg5p2x5Lqs6YO954ub5rGf5biC5p2x6YeO5bed77yU5LiB55uu77yR77yU4oiS77yR77yVIOODl-ODhuOCo-ODvOOCs-ODvOODnQ!5e0!3m2!1sja!2s!4v1772015755185!5m2!1sja!2s"
                             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
