--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             </button>
 
             <nav class="nav" id="nav" aria-hidden="true">
-                <!-- 右上角 close -->
+                <!-- 右上 close -->
                 <button class="nav-close" id="navClose" type="button" aria-label="Close menu">
                     <span class="nav-close-x">×</span>
                     <span class="nav-close-text">CLOSE</span>
                 </button>
 
-                <!-- 中间菜单 -->
+                <!-- nav -->
                 <div class="nav-panel">
                     <a href="#about">私たちについて</a>
                     <a href="#company">会社概要</a>
@@ -284,8 +284,6 @@
 
             <!-- ドラマ -->
             <div class="works-group works-group-drama">
-                <!-- 装饰：胶卷 -->
-                <!-- <img class="works-deco deco-film1" src="./assets/img/index/decor_film1.png" alt=""> -->
 
                 <h3 class="section-sub sub-drama">ドラマ</h3>
 
@@ -319,9 +317,6 @@
 
             <!-- CM -->
             <div class="works-group works-group-cm">
-
-                <!-- 装饰：放映机 -->
-                <!-- <img class="works-deco deco-projector" src="./assets/img/index/decor_projector.png" alt=""> -->
 
                 <h3 class="section-sub sub-cm">CM</h3>
 
@@ -396,13 +391,13 @@
             <!-- ① フリーランスドライバー -->
             <article class="recruit-card recruit-card--driver">
 
-                <!-- 左图 -->
+                <!-- left img -->
                 <figure class="recruit-media">
                     <span class="recruit-media__bg"></span>
                     <img class="recruit-media__img" src="./assets/img/index/job_car.png" alt="driver image">
                 </figure>
 
-                <!-- 右侧内容 -->
+                <!-- right contents -->
                 <div class="recruit-content">
 
                     <h3 class="recruit-heading">
@@ -455,7 +450,7 @@
 
                 </div>
 
-                <!-- 左下车插画 -->
+                <!-- left car img -->
                 <img class="recruit__car" src="./assets/img/index/decor_car.png" alt="car deco">
 
             </article>
@@ -556,7 +551,7 @@
                 <img src="./assets/img/index/logo_black.png" alt="Starseed Production">
             </div>
 
-            <!-- 公司名 -->
+            <!-- 会社名 -->
             <h3 class="footer-company">
                 スターシードプロダクション株式会社
             </h3>
@@ -581,7 +576,10 @@
 
         </div>
     </footer>
-
+    <!--=================== ScrollReveal ==================-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./assets/js/ScrollReveal Animations.js"></script>
+    <!--=================== Main JS ====================-->
     <script src="./assets/js/script.js"></script>
 </body>
 
