--- a/job_car.html
+++ b/job_car.html
@@ -135,6 +135,12 @@
         </div>
     </footer>
 
+    <!--=================== ScrollReveal ==================-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./assets/js/ScrollReveal Animations.js"></script>
+    <!--=================== Main JS ====================-->
+    <script src="./assets/js/script.js"></script>
+
 </body>
 
 </html>
