--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
 
             <!-- ドラマ -->
-            <div class="works-group works-group-drama">
+            <div class="works-group">
 
                 <h3 class="section-sub sub-drama">ドラマ</h3>
 
@@ -316,7 +316,7 @@
             </div>
 
             <!-- CM -->
-            <div class="works-group works-group-cm">
+            <div class="works-group">
 
                 <h3 class="section-sub sub-cm">CM</h3>
 
