--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <!-- ローディング -->
+    <div class="loading">
+        <img class="loading-logo" src="./assets/img/index/loading-logo.png" alt="">
+    </div>
 
     <header class="header" id="header">
         <div class="container header-inner">
