--- a/job_car.html
+++ b/job_car.html
@@ -13,6 +13,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/job_car.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 
 <body>
@@ -25,18 +26,32 @@
 
             <div class="logo">
                 <a href="index.html" class="logo-link">
-                    <img src="./assets/img/index/logo_white.png" alt="Starseed Production">
+                    <img src="./assets/img/index/logo_white.png" alt="">
+                    <!-- <img src="./assets/img/index/logo_black.png" alt=""> -->
                     <span>株式会社スターシードプロダクション</span>
                 </a>
             </div>
 
-            <nav class="nav" id="nav">
+            <button class="menu-btn" id="menuBtn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <nav class="nav" id="nav" aria-hidden="true">
+                <!-- 右上 close -->
+                <button class="nav-close" id="navClose" type="button" aria-label="Close menu">
+                    <span class="nav-close-x">×</span>
+                    <span class="nav-close-text">CLOSE</span>
+                </button>
+
+                <!-- nav -->
                 <div class="nav-panel">
-                    <a href="index.html#about">私たちについて</a>
-                    <a href="index.html#company">会社概要</a>
-                    <a href="index.html#works">事業案内</a>
-                    <a href="index.html#recruit">採用情報</a>
-                    <a href="index.html#contact">お問い合わせ</a>
+                    <a href="#about">私たちについて</a>
+                    <a href="#company">会社概要</a>
+                    <a href="#works">事業案内</a>
+                    <a href="#recruit">採用情報</a>
+                    <a href="#contact">お問い合わせ</a>
                 </div>
             </nav>
 
