--- a/job_car.html
+++ b/job_car.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- =========================
-       Header（常にグレー背景）
+       Header
   ========================== -->
     <header class="header" id="header">
         <div class="container header-inner">
